--- a/FrontEnd/FrontEndCode/src/app/pages/edit-siteuser/edit-siteuser.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/edit-siteuser/edit-siteuser.component.html
@@ -11,7 +11,7 @@
     
     <!-- Meal Date Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> Meal Date </th>
+      <th mat-header-cell *matHeaderCellDef  [style.height.px]="headerHeight" [style.background-color]="'black'" [style.color]="'white'"> SiteUser Id</th>
       <td mat-cell *matCellDef="let element"> {{element.id}} 
         
       </td>
