--- a/FrontEnd/FrontEndCode/src/app/pages/deleteadmin/deleteadmin.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/deleteadmin/deleteadmin.component.html
@@ -22,6 +22,9 @@
           Actions
         </th>
         <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary" (click)="openUpdatePasswordDialog()">
+            <mat-icon>edit</mat-icon>
+          </button>
           <button mat-icon-button color="warn" (click)="onDeleteClick(element.id)">  
             <!-- (click)="onDeleteClick(element.id)" -->
             <mat-icon>delete</mat-icon>
