--- a/FrontEnd/FrontEndCode/src/app/pages/siteuser-dashboard/siteuser-dashboard.component.html
+++ b/FrontEnd/FrontEndCode/src/app/pages/siteuser-dashboard/siteuser-dashboard.component.html
@@ -60,28 +60,29 @@
             <br>
             <div class="icon-button-container">
                   <button class="icon-button"[routerLink]="['/addmealcount']"   >
-                    <img src="assets/edit.png" alt="Button Image" style="width: 100px; height: 100px;"> 
+                    <img src="assets/editmealcount.JPG" alt="Button Image" style="width: 100px; height: 100px;"> 
                    Add Meal Count
                   </button>   
               </div>
                
 
-              <div class="mat-card-container">
+              <!-- <div class="mat-card-container">
                 <mat-card class="mat-card">
                   <mat-card-content>
-                    <div class="mat-card-content-container">
+                    <div class="mat-card-content-container"> -->
                       <!-- <img src="assets/time.png" alt="Profile Pic" class="mat-card-image"> -->
-                      <div class="mat-card-text">
-                        <div class="date-time-text">
-                          <div class="time">
-                            <h4 class="time-text">{{ currentTime | date:'h:mm a' }}</h4>
-                          </div>
-                          <div class="date">
+                      <!-- <div class="mat-card-text">
+                        <div class="date-time-text"> -->
+                          <!-- <div class="date">
                             <p class="date-text">
                               {{ currentDate | date:'d MMM y' }}<br>
                               {{ currentDate | date:'EEEE' }}
                             </p>
+                          </div> -->
+                          <!-- <div class="time">
+                            <h4 class="time-text">{{ currentTime | date:'h:mm a' }}</h4>
                           </div>
+                          
                         </div>
                         
                       </div>
@@ -89,10 +90,56 @@
                   </mat-card-content>
                 </mat-card>
               </div>
+              -->
+           
+<!--               
+              <div class="mat-card-container">
+                <mat-card class="mat-card">
+                  <mat-card-content>
+                    <div class="mat-card-content-container">
+                      <div class="date-time-text time-date-text">
+                        <div class="time">
+                          <h4 class="time-text">{{ currentTime | date:'h:mm a' }}</h4>
+                        </div>
+                        <div class="date date-text">
+                          <div class="date-text-left">
+                            {{ currentDate | date:'d MMM y' }}
+                          </div>
+                          <div class="date-text-right">
+                            <span class="day-text">{{ currentDate | date:'EEEE' }}</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </mat-card-content>
+                </mat-card>
+              </div> -->
+              <div class="mat-card-container">
+                <mat-card class="mat-card">
+                  <mat-card-content>
+                    <div class="mat-card-content-container">
+                      <div class="date-time-text time-date-text">
+                        <div class="time">
+                          <h3 class="larger-time-text">{{ currentTime | date:'h:mm a' }}</h3>
+                        </div>
+                        <div class="date date-text">
+                          <div class="date-text-left">
+                            {{ currentDate | date:'d MMM y' }}
+                          </div>
+                          <!-- <div class="date-text-right">
+                            <span class="day-text">{{ currentDate | date:'EEEE' }}</span>
+                          </div> -->
+                        </div>
+                      </div>
+                    </div>
+                  </mat-card-content>
+                </mat-card>
+              </div>
               
               
-            
-             
+              
+              
+           
            
               
               
