--- a/FrontEnd/FrontEndCode/src/app/pages/siteuser-dashboard/siteuser-dashboard.component.scss
+++ b/FrontEnd/FrontEndCode/src/app/pages/siteuser-dashboard/siteuser-dashboard.component.scss
@@ -122,41 +122,11 @@
     margin: 0;
   }
   
-  
-  .mat-card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-  }
-  
-  .mat-card {
-    width: 100%;
-    max-width: 400px; /* Adjust the maximum width as needed */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    background: linear-gradient(to bottom, #007bff, #ffffff);
-  }
-  
-  .mat-card-content-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .mat-card-image {
-    width: 112px; /* Adjust the image dimensions as needed */
-    height: 112px;
-    margin-right: 20px; /* Adjust the spacing between image and text as needed */
-    object-fit: cover; /* To maintain aspect ratio and fill the container */
-  }
-  
-  .mat-card-text {
-    flex-grow: 1;
-  }
-  
-  .mat-card-actions {
-    display: flex;
-    justify-content: flex-end;
-  }
+ 
+
+
+
+
   
   button {
     margin-left: 8px; /* Adjust spacing between buttons as needed */
@@ -173,32 +143,6 @@
     
   
   }
-  .time-text {
-    margin-right: 1px; /* Adjust the right margin as needed */
-  }
-  
-  .date-text {
-    text-align: center; /* Right-align the date */
-  }
-  
-  /* Add these styles to your CSS file */
-.time-date-text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.time {
-  font-size: 24px; /* Adjust the font size as needed */
-  font-weight: bold; /* Add bold font-weight if desired */
-}
-
-.date {
-  font-size: 14px; /* Adjust the font size as needed */
-}
-
-  
   
   
   .dashboard-heading h1 {
@@ -211,4 +155,56 @@
     padding: 10px; /* Add some padding */
 }
 
-  
+
+.mat-card {
+  width: 150%;
+  // max-width: 800px;
+  height: 200px; 
+  background: linear-gradient(to bottom, #022c58, #043c70);
+  border: 4px solid black;
+}
+
+.date-time-text {
+  display: flex;
+  align-items: center;
+  flex-direction: column; /* Change to a vertical layout */
+  justify-content: center; /* Center align vertically */
+}
+
+.time {
+  text-align: center;
+  color: #fff;
+  margin-bottom: 5px; /* Add spacing between time and date */
+}
+
+.date {
+  text-align: center;
+  margin-top: 30px; 
+}
+
+
+.larger-time-text {
+  font-size: 9rem !important; /* Adjust the font size as needed */
+}
+
+.date-text-left {
+  font-size: 2.5rem;
+  color: rgb(244, 170, 10);
+}
+
+.date-text-right {
+  font-size: 10rem;
+  color: rgb(244, 177, 6);
+}
+
+.day-text {
+  font-size: 2rem;
+  margin-top: 5px;
+}
+
+.mat-card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
